# book-llm-agent

./: .gitignore  README.md  pyproject.toml
notebooks/chapter2/: 01_openai_introduction.ipynb  02_langchain_introduction.ipynb  03_gradio_introduction.ipynb
notebooks/chapter3/: 01_knowledge.ipynb  02_multi_agent_system_construction.ipynb  02_tools.ipynb  03_agent.ipynb  04_memory.ipynb  05_persona.ipynb
notebooks/chapter4/: 02_multi_agent_system_construction.ipynb  03_multi_agent_system_application.ipynb
writer_tools/: chat_ui.py  chat_ui_gradio.py  pyproject.toml
writer_tools/.streamlit/: config.toml
