[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = ""
authors = ["aRySt0cat <ryuta.academic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.2.1"
ipywidgets = "^8.1.3"
openai = "^1.34.0"
tiktoken = "^0.7.0"
langchain = "^0.2.5"
gradio = "^4.36.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
langchain-openai = "^0.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
