[tool.poetry]
name = "writer-tools"
version = "0.1.0"
description = ""
authors = ["aRySt0cat <ryuta.academic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
gradio = "^4.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
